Updated deprecated functions